library/general/aiapprovedmodelregistry/samples/ai-model-approved-registry/example_disallowed_registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ai-model-unapproved-registry
  labels:
    workload-type: ai-model
spec:
  containers:
    - name: model-server
      image: docker.io/someuser/mymodel:latest
      resources:
        limits:
          cpu: "4"
          memory: "16Gi"
